--- a/index.html
+++ b/index.html
@@ -1,29 +1,56 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Luke Admin</title>
-    <meta charset="utf-8">
-    <script src="//code.jquery.com/jquery-3.1.0.min.js"></script>
-		 
 
-    <!-- Auth0 lock script -->
-    <script src="//cdn.auth0.com/js/lock/10.3.0/lock.min.js"></script>
+<head>
+	<title>Luke Admin</title>
+	<meta charset="utf-8">
+	<script src="//code.jquery.com/jquery-3.1.0.min.js"></script>
 
-    <script src="auth0-variables.js"></script>
-		<script src="app.js"></script>
-		<!-- Bootstrap-->
-		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-  </head>
-  <body>
+	<!-- Auth0 lock script -->
+	<script src="//cdn.auth0.com/js/lock/10.3.0/lock.min.js"></script>
 
-    <img alt="avatar" class="avatar" style="display:none;">
-    <p>Welcome <span class="nickname"></span></p>
-    <button type="submit" class="btn-login">Sign In</button>
-    <button type="submit" class="btn-logout" style="display:none;">Sign Out</button>
-		
-		
-  </body>
+	<script src="auth0-variables.js"></script>
+	<script src="app.js"></script>
+	<!-- Bootstrap-->
+	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+
+<body>
+
+	<img alt="avatar" class="avatar" style="display:none;">
+	<p>Welcome <span class="nickname"></span></p>
+	<button type="submit" class="btn-login">Sign In</button>
+	<button type="submit" class="btn-logout" style="display:none;">Sign Out</button>
+
+	<form>
+		<label>Title</label>
+		<br>
+		<input placeholder="Title name" id="title"/>
+		<br>
+		<label>EXP Gain from Report</label>
+		<br>
+		<input placeholder="EXP Gain from Report" id="reportGain"/>
+		<br>
+		<label>EXP Gain from Upvote</label>
+		<br>
+		<input placeholder="EXP Gain from Upvote" id="upvoteGain"/>
+		<br>
+		<label>EXP Minus from Downvote</label>
+		<br>
+		<input placeholder="EXP Minus from Downvote" id="downvoteGain"/>
+		<br>
+		<label>Pattern State</label>
+		<br>
+		<input placeholder="true or false" id="active"/>
+		<br>
+		<button type="submit" id="submit">Submit</button>
+	</form>
+
+
+</body>
+
 </html>
